--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+/* CUSTOM GLOBAL FONT FAMILY FOR TAILWIND */
+@layer base {
+  html {
+    font-family: "Raleway", system-ui, sans-serif;
+  }
+}
+
 body {
+  margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,6 +28,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
+
+
 
 
